--- a/region_visualization_demo.ipynb
+++ b/region_visualization_demo.ipynb
@@ -31,34 +31,22 @@
       "    from io import StringIO\n"
      ],
      "language": "python",
-     "prompt_number": 30
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "AttributeError",
-       "evalue": "module 'visual_genome.api' has no attribute 'get_experiement'",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-        "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-31-b9ecf3fc7067>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_experiement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#image_id = ids[8]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#print(\"We got an image with id: {0}\".format(int(ids)))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAttributeError\u001b[0m: module 'visual_genome.api' has no attribute 'get_experiement'"
-       ],
-       "output_type": "pyerr"
-      }
-     ],
+     "outputs": [],
      "input": [
-      "ids = vg.get_experiement(start_index=0, end_index=10)\n",
-      "#image_id = ids[8]\n",
-      "#print(\"We got an image with id: {0}\".format(int(ids)))\n",
+      "ids = vg.get_image_ids_in_range(start_index=0, end_index=10)\n",
+      "image_id = ids[8]\n",
+      "print(\"We got an image with id: {0}\".format(image_id))\n",
       "\n",
       "%matplotlib inline"
      ],
      "language": "python",
-     "prompt_number": 31
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
